[package]
name = "rusty-password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chacha20poly1305 = "0.10.1"
clap = { version = "4.4.4", features = ["derive"] }
rust-argon2 = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
